edition = "2023";

package internal.proto.v1.rpc;

option go_package = "github.com/vadicheck/shorturl/internal/proto/v1/rpc";

message DeleteRequest {
  repeated string ids = 1;
}

message DeleteResponse {
}
